# grpez

./: LICENSE  README.md  pyproject.toml
grpez/: __init__.py  dep.py  grpez.py  handler.py  proto.py  service.py
tests/: utils.py
tests/test_examples/: conftest.py  test_dependency.py  test_echo.py  test_interceptor.py  test_multiple_asgi_apps.py  test_reflection.py  test_streaming.py  utils.py
tests/test_examples/grpez_gen/: dependency.proto  dependency_pb2.py  dependency_pb2_grpc.py  echoservice.proto  echoservice_pb2.py  echoservice_pb2_grpc.py  helloservice.proto  helloservice_pb2.py  helloservice_pb2_grpc.py  interceptor.proto  interceptor_pb2.py  interceptor_pb2_grpc.py  servicewithmetrics.proto  servicewithmetrics_pb2.py  servicewithmetrics_pb2_grpc.py  streaming.proto  streaming_pb2.py  streaming_pb2_grpc.py
